@@ -18,3 +18,4 @@
 20160608 ./watchlist/hia-parse-cifs.sh updated.
 20160608 ./watchlist/hia-parse-dns.sh added.
 20160608 ./watchlist/hia-parse-ftp.sh added.
+20160608 ./watchlist/hia-parse-http.sh added.
